Project section html/css

--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
               2021. <br />
               I knew that changing carrer won't be easy but </br> I was always into
               tech and computers,<br />
-              so I finally decided to give it a shot and that's how i got here.<br />
+              so I finally decided to give it a shoot and that's how i got here.<br />
             </p>
             <ul class="social-links">
               <li>
@@ -136,6 +136,73 @@
             </picture>
           </div>
         </div>
+      </section>
+
+      <section class="section-portfolio">
+        
+        <div class="container ">
+          <h3 class="heading-h3">My projects</h3>
+          <div class="grid grid--2-cols">
+          <div class="project test1">
+            <div class="project-box">
+              <picture>
+                <source srcset="Zdjecia/project-test-1.jpg" type="image/jpg"/>
+                <img
+                src="Zdjecia/project-test-1.jpg"
+                class="project-pic"
+                alt="people hiking in the mountains"
+                />
+              </picture>
+              <h4 class="heading-h4">Twitch (Test123)</h4>
+              <p class="project-short-description">Streaming platoform for people to watch other people streaming video games, irl etc.</p>
+              <a href="#project-test-1" class="view-project">View project</a>
+            </div>
+          </div>
+          <div class="project test2">  <div class="project-box">
+            <picture>
+              <source srcset="Zdjecia/project-test-1.jpg" type="image/jpg"/>
+              <img
+              src="Zdjecia/project-test-1.jpg"
+              class="project-pic"
+              alt="people hiking in the mountains"
+              />
+            </picture>
+            <h4 class="heading-h4">Twitch (Test123)</h4>
+            <p class="project-short-description">Streaming platoform for people to watch other people streaming video games, irl etc.</p>
+            <a href="#project-test-1" class="view-project">View project</a>
+          </div></div>
+          <div class="project test3">
+            <div class="project-box">
+              <picture>
+                <source srcset="Zdjecia/project-test-1.jpg" type="image/jpg"/>
+                <img
+                src="Zdjecia/project-test-1.jpg"
+                class="project-pic"
+                alt="people hiking in the mountains"
+                />
+              </picture>
+              <h4 class="heading-h4">Twitch (Test123)</h4>
+              <p class="project-short-description">Streaming platoform for people to watch other people streaming video games, irl etc.</p>
+              <a href="#project-test-1" class="view-project">View project</a>
+            </div>
+          </div>
+          <div class="project test4">
+            <div class="project-box">
+              <picture>
+                <source srcset="Zdjecia/project-test-1.jpg" type="image/jpg"/>
+                <img
+                src="Zdjecia/project-test-1.jpg"
+                class="project-pic"
+                alt="people hiking in the mountains"
+                />
+              </picture>
+              <h4 class="heading-h4">Twitch (Test123)</h4>
+              <p class="project-short-description">Streaming platoform for people to watch other people streaming video games, irl etc.</p>
+              <a href="#project-test-1" class="view-project">View project</a>
+            </div>
+          </div>
+        </div>
+      </div>
       </section>
     </main>
     <script
