pozbycie sie kolumny, social media ikonek

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   target="_blank"
                   href="https://github.com/m-dombkowski"
                 >
-                  <span title="Check my Github profile!"
+                  <span class="test" title="Check my Github profile!"
                     ><ion-icon
                       class="ion-icon"
                       name="logo-github"
@@ -260,7 +260,7 @@
         </div>
       </section>
 
-      <section class="section-contact" id="contact">
+      <!-- <section class="section-contact" id="contact">
         <div class="container">
           <h3 class="heading-h3 center">Contact</h3>
           <form class="contact-form" action="#">
@@ -286,7 +286,7 @@
             <input type="submit" class="send" value="Send" />
           </form>
         </div>
-      </section>
+      </section> -->
       <footer class="footer">
         <div class="container grid grid--2-cols">
           <div class="footer-text-box">
