naprawa smooth transition nav w light mode, scrollowania po nacisnieciu "contact" w nawigacji

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
           </form>
         </div>
       </section> -->
-      <footer class="footer">
+      <footer class="footer" id="contact">
         <div class="container grid grid--2-cols">
           <div class="footer-text-box">
             <h3 class="heading-h3">Got idea?</h3>
