--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicons/favicon-16x16.png"
+    />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff" />
     <title>Mateusz Dombkowski</title>
   </head>
   <body>
