Added full project site with js, light/dark mode and responsiveness. Also small refractor

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/queries.css" />
+    <link rel="stylesheet" href="css/mutual.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -142,6 +143,8 @@
               <span class="skills-element">Flexbox</span>
               <span class="skills-element">Javascript ES6</span>
               <span class="skills-element">Git</span>
+              <span class="skills-element">REST</span>
+              <span class="skills-element">Local Storage</span>
             </div>
             <h3 class="heading-h3">What I am currently learning</h3>
             <div class="skills-flex">
@@ -172,24 +175,19 @@
             <div class="project test1">
               <div class="project-box">
                 <picture>
-                  <source
-                    srcset="Zdjecia/project-test-1.jpg"
-                    type="image/jpg"
-                  />
+                  <source srcset="Zdjecia/weather-app.jpg" type="image/jpg" />
                   <img
-                    src="Zdjecia/project-test-1.jpg"
+                    src="Zdjecia/weather-app.jpg"
                     class="project-pic"
-                    alt="people hiking in the mountains"
+                    alt="picture of the first project"
                   />
                 </picture>
-                <h4 class="heading-h4">Twitch (Test123)</h4>
+                <h4 class="heading-h4">Weather App</h4>
                 <p class="project-short-description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Necessitatibus, non perferendis sit a minima officia eaque
-                  optio modi, ipsa nostrum cumque ad vel praesentium nam sint
-                  labore architecto nisi dignissimos?
+                  Simple Weather app that allows you to track actual weather of
+                  selected city as well as check 12 hours forecast.
                 </p>
-                <a href="#project-test-1" class="view-project">View project</a>
+                <a href="project1.html" class="view-project">View project</a>
               </div>
             </div>
             <div class="project test2">
@@ -380,5 +378,6 @@
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
     <script src="js/script.js"></script>
+    <script src="js/mutuals.js"></script>
   </body>
 </html>
