added second project page, changed some lorem ipsum and deleted "test" projects

--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
             <h2 class="heading-h2 no-margin-bottom">Aspiring Frontend Dev,</h2>
             <p class="hero-p">Tech enthusiast and coffee lover.</p>
             <p class="about">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio
-              libero suscipit modi quasi saepe nobis adipisci quisquam
-              blanditiis at in hic omnis commodi atque soluta temporibus culpa,
-              nulla quis incidunt.
+              I'm a self-taught dev who started his frontend journey in June
+              2021. Liked it since the beginning even when I was only playing
+              with plane HTML and CSS but deeper I'm going the more I fall in
+              love with it. Outside of coding I like to occasionally edit some
+              videos from games as well as listen to some heavy music
+              (Metalcore) 😉.
             </p>
             <ul class="social-links">
               <li>
@@ -143,8 +145,10 @@
               <span class="skills-element">Flexbox</span>
               <span class="skills-element">Javascript ES6</span>
               <span class="skills-element">Git</span>
-              <span class="skills-element">REST</span>
+              <span class="skills-element">API REST</span>
               <span class="skills-element">Local Storage</span>
+              <span class="skills-element">npm</span>
+              <span class="skills-element">Parcel</span>
             </div>
             <h3 class="heading-h3">What I am currently learning</h3>
             <div class="skills-flex">
@@ -193,73 +197,19 @@
             <div class="project test2">
               <div class="project-box">
                 <picture>
-                  <source
-                    srcset="Zdjecia/project-test-1.jpg"
-                    type="image/jpg"
-                  />
+                  <source srcset="Zdjecia/rest-main.jpg" type="image/jpg" />
                   <img
-                    src="Zdjecia/project-test-1.jpg"
+                    src="Zdjecia/rest-main.jpg"
                     class="project-pic"
-                    alt="people hiking in the mountains"
+                    alt="project main page"
                   />
                 </picture>
-                <h4 class="heading-h4">Twitch (Test123)</h4>
+                <h4 class="heading-h4">REST Project</h4>
                 <p class="project-short-description">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Voluptatem repellendus iure dolore. Accusamus enim eligendi
-                  quibusdam itaque reprehenderit vero ipsa ipsum eaque quas
-                  impedit, veritatis tenetur. Assumenda quo laudantium
-                  voluptate..
+                  Website which allows you to view, create, delete users as well
+                  as edit their details, add posts and comments
                 </p>
-                <a href="#project-test-1" class="view-project">View project</a>
-              </div>
-            </div>
-            <div class="project test3">
-              <div class="project-box">
-                <picture>
-                  <source
-                    srcset="Zdjecia/project-test-1.jpg"
-                    type="image/jpg"
-                  />
-                  <img
-                    src="Zdjecia/project-test-1.jpg"
-                    class="project-pic"
-                    alt="people hiking in the mountains"
-                  />
-                </picture>
-                <h4 class="heading-h4">Twitch (Test123)</h4>
-                <p class="project-short-description">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Repudiandae dignissimos eveniet, iusto deleniti, distinctio
-                  voluptatum reiciendis amet sed magnam quas ipsam molestias
-                  repellendus fuga numquam mollitia doloribus eligendi cum
-                  dolores..
-                </p>
-                <a href="#project-test-1" class="view-project">View project</a>
-              </div>
-            </div>
-            <div class="project test4">
-              <div class="project-box">
-                <picture>
-                  <source
-                    srcset="Zdjecia/project-test-1.jpg"
-                    type="image/jpg"
-                  />
-                  <img
-                    src="Zdjecia/project-test-1.jpg"
-                    class="project-pic"
-                    alt="people hiking in the mountains"
-                  />
-                </picture>
-                <h4 class="heading-h4">Twitch (Test123)</h4>
-                <p class="project-short-description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Mollitia, perspiciatis harum. Maiores sint asperiores
-                  voluptatibus unde animi assumenda ea tenetur reiciendis
-                  laborum consequuntur fugiat eveniet, repudiandae voluptatem
-                  laboriosam, commodi aut..
-                </p>
-                <a href="#project-test-1" class="view-project">View project</a>
+                <a href="project2.html" class="view-project">View project</a>
               </div>
             </div>
           </div>
