--- a/project1.html
+++ b/project1.html
@@ -22,7 +22,7 @@
     />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#ffffff" />
-    <title>Mateusz Dombkowski</title>
+    <title>Mateusz Dombkowski - Weather</title>
   </head>
   <body>
     <main>
