added 3rd project (react one) and changed some texts (footer and info about myself)

--- a/index.html
+++ b/index.html
@@ -63,14 +63,13 @@
           <div class="hero-text-box">
             <span class="hero-span">Hi, I'm Mateusz.</span>
             <h2 class="heading-h2 no-margin-bottom">Aspiring Frontend Dev,</h2>
-            <p class="hero-p">Tech enthusiast and coffee lover.</p>
             <p class="about">
               I'm a self-taught dev who started his frontend journey in June
               2021. Liked it since the beginning even when I was only playing
               with plane HTML and CSS but deeper I'm going the more I fall in
-              love with it. Outside of coding I like to occasionally edit some
-              videos from games as well as listen to some heavy music
-              (Metalcore) 😉.
+              love with it. Outside of coding I like to occasionally hike in the
+              polish mountains as well as listen to some heavy music (Metalcore)
+              😉.
             </p>
             <ul class="social-links">
               <li>
@@ -138,22 +137,23 @@
           <div class="skill-tabs">
             <h2 class="heading-h3">My Skills</h2>
             <div class="skills-flex">
-              <span class="skills-element">HTML 5</span>
+              <span class="skills-element">Javascript</span>
+              <span class="skills-element">RESTful API</span>
+              <span class="skills-element">React.js</span>
+              <span class="skills-element">React Router</span>
+              <span class="skills-element">Context API</span>
+              <span class="skills-element">HTML</span>
               <span class="skills-element">CSS</span>
               <span class="skills-element">CSS Grid</span>
-              <span class="skills-element">Responsive Web Design</span>
               <span class="skills-element">Flexbox</span>
-              <span class="skills-element">Javascript ES6</span>
-              <span class="skills-element">Git</span>
-              <span class="skills-element">API REST</span>
+              <span class="skills-element">Responsive Web Design</span>
+              <span class="skills-element">Github</span>
               <span class="skills-element">Local Storage</span>
-              <span class="skills-element">npm</span>
-              <span class="skills-element">Parcel</span>
             </div>
             <h3 class="heading-h3">What I am currently learning</h3>
             <div class="skills-flex">
-              <span class="skills-element">React</span>
               <span class="skills-element">Redux</span>
+              <span class="skills-element">Redux Toolkit</span>
             </div>
           </div>
 
@@ -212,6 +212,24 @@
                 <a href="project2.html" class="view-project">View project</a>
               </div>
             </div>
+            <div class="project test3">
+              <div class="project-box">
+                <picture>
+                  <source srcset="Zdjecia/Calendar-Side.jpg" type="image/jpg" />
+                  <img
+                    src="Zdjecia/Calendar-Side.jpg"
+                    class="project-pic"
+                    alt="project main page"
+                  />
+                </picture>
+                <h4 class="heading-h4">Calendar</h4>
+                <p class="project-short-description">
+                  Simple calendar app created using React.js, Fullcalendar.io
+                  and Firebase.
+                </p>
+                <a href="project3.html" class="view-project">View project</a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -246,7 +264,10 @@
       <footer class="footer" id="contact">
         <div class="container grid grid--2-cols">
           <div class="footer-text-box">
-            <h3 class="heading-h3">Got idea?</h3>
+            <h3 class="heading-h3">
+              Currently looking for a full time position (office or remote) as a
+              Junior Frontend (React) Dev.
+            </h3>
             <p class="footer-text">
               Feel free to contact me on any social media or via email!
             </p>
