--- a/project1.html
+++ b/project1.html
@@ -116,7 +116,8 @@
           <div class="footer-text-box">
             <h3 class="heading-h3">Got idea?</h3>
             <p class="footer-text">
-              Feel free to contact me on any social media or via email!
+              Currently looking for a full time position (office or remote) as a
+              Junior Frontend (React) Dev.
             </p>
             <p class="footer-email">
               <span>Send me an email! : </span>
