changed icons to social medias, deleted some, added linkedin, fixed sticky nav in all projects

--- a/index.html
+++ b/index.html
@@ -88,6 +88,20 @@
               </li>
               <li>
                 <a
+                  class="social-link linkedin"
+                  target="_blank"
+                  href="https://www.linkedin.com/in/mateusz-dombkowski-683b26241/"
+                >
+                  <span class="test" title="Check my LinkedIn profile!"
+                    ><ion-icon
+                      class="ion-icon"
+                      name="logo-linkedin"
+                      style="pointer-events: none"
+                    ></ion-icon></span
+                ></a>
+              </li>
+              <!-- <li>
+                <a
                   class="social-link youtube"
                   target="_blank"
                   href="https://www.youtube.com/channel/UC2YyqF5ix9HlTdpXGekDETQ"
@@ -127,7 +141,7 @@
                       style="pointer-events: none"
                     ></ion-icon></span
                 ></a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
@@ -296,6 +310,20 @@
               </li>
               <li>
                 <a
+                  class="social-link linkedin"
+                  target="_blank"
+                  href="https://www.linkedin.com/in/mateusz-dombkowski-683b26241/"
+                >
+                  <span class="test" title="Check my LinkedIn profile!"
+                    ><ion-icon
+                      class="ion-icon"
+                      name="logo-linkedin"
+                      style="pointer-events: none"
+                    ></ion-icon></span
+                ></a>
+              </li>
+              <!-- <li>
+                <a
                   class="social-link youtube"
                   target="_blank"
                   href="https://www.youtube.com/channel/UC2YyqF5ix9HlTdpXGekDETQ"
@@ -334,7 +362,7 @@
                       style="pointer-events: none"
                     ></ion-icon></span
                 ></a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
