--- a/project3.html
+++ b/project3.html
@@ -26,19 +26,20 @@
   </head>
   <body>
     <main>
-      <header class="header">
-        <nav class="navigation">
-          <button class="btn-light-dark-mode">
-            <ion-icon class="icon-mode sun" name="sunny"></ion-icon>
-            <ion-icon class="icon-mode moon" name="moon"></ion-icon>
-          </button>
+      <div class="nav-wrapper">
+        <header class="header">
+          <nav class="navigation">
+            <button class="btn-light-dark-mode">
+              <ion-icon class="icon-mode sun" name="sunny"></ion-icon>
+              <ion-icon class="icon-mode moon" name="moon"></ion-icon>
+            </button>
 
-          <button class="go-back-to-main">
-            <a class="go-back-anchor" href="index.html">&larr;</a>
-          </button>
-        </nav>
-      </header>
-
+            <button class="go-back-to-main">
+              <a class="go-back-anchor" href="index.html">&larr;</a>
+            </button>
+          </nav>
+        </header>
+      </div>
       <section class="title-section">
         <div class="title-container">
           <h1 class="project-title">Calendar</h1>
@@ -148,6 +149,20 @@
               </li>
               <li>
                 <a
+                  class="social-link linkedin"
+                  target="_blank"
+                  href="https://www.linkedin.com/in/mateusz-dombkowski-683b26241/"
+                >
+                  <span class="test" title="Check my LinkedIn profile!"
+                    ><ion-icon
+                      class="ion-icon"
+                      name="logo-linkedin"
+                      style="pointer-events: none"
+                    ></ion-icon></span
+                ></a>
+              </li>
+              <!-- <li>
+                <a
                   class="social-link youtube"
                   target="_blank"
                   href="https://www.youtube.com/channel/UC2YyqF5ix9HlTdpXGekDETQ"
@@ -186,7 +201,7 @@
                       style="pointer-events: none"
                     ></ion-icon></span
                 ></a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
