--- a/project2.html
+++ b/project2.html
@@ -26,6 +26,7 @@
   </head>
   <body>
     <main>
+      <div class="nav-wrapper">
       <header class="header">
         <nav class="navigation">
           <button class="btn-light-dark-mode">
@@ -38,7 +39,7 @@
           </button>
         </nav>
       </header>
-
+    </div>
       <section class="title-section">
         <div class="title-container">
           <h1 class="project-title">REST Project</h1>
@@ -144,6 +145,20 @@
               </li>
               <li>
                 <a
+                  class="social-link linkedin"
+                  target="_blank"
+                  href="https://www.linkedin.com/in/mateusz-dombkowski-683b26241/"
+                >
+                  <span class="test" title="Check my LinkedIn profile!"
+                    ><ion-icon
+                      class="ion-icon"
+                      name="logo-linkedin"
+                      style="pointer-events: none"
+                    ></ion-icon></span
+                ></a>
+              </li>
+              <!-- <li>
+                <a
                   class="social-link youtube"
                   target="_blank"
                   href="https://www.youtube.com/channel/UC2YyqF5ix9HlTdpXGekDETQ"
@@ -182,7 +197,7 @@
                       style="pointer-events: none"
                     ></ion-icon></span
                 ></a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
