fixed wrong footer text in some projects

--- a/project1.html
+++ b/project1.html
@@ -116,10 +116,12 @@
       <footer class="footer" id="contact">
         <div class="container grid grid--2-cols">
           <div class="footer-text-box">
-            <h3 class="heading-h3">Got idea?</h3>
-            <p class="footer-text">
+            <h3 class="heading-h3">
               Currently looking for a full time position (office or remote) as a
               Junior Frontend (React) Dev.
+            </h3>
+            <p class="footer-text">
+              Feel free to contact me on any social media or via email!
             </p>
             <p class="footer-email">
               <span>Send me an email! : </span>
