--- a/project2.html
+++ b/project2.html
@@ -27,19 +27,19 @@
   <body>
     <main>
       <div class="nav-wrapper">
-      <header class="header">
-        <nav class="navigation">
-          <button class="btn-light-dark-mode">
-            <ion-icon class="icon-mode sun" name="sunny"></ion-icon>
-            <ion-icon class="icon-mode moon" name="moon"></ion-icon>
-          </button>
+        <header class="header">
+          <nav class="navigation">
+            <button class="btn-light-dark-mode">
+              <ion-icon class="icon-mode sun" name="sunny"></ion-icon>
+              <ion-icon class="icon-mode moon" name="moon"></ion-icon>
+            </button>
 
-          <button class="go-back-to-main">
-            <a class="go-back-anchor" href="index.html">&larr;</a>
-          </button>
-        </nav>
-      </header>
-    </div>
+            <button class="go-back-to-main">
+              <a class="go-back-anchor" href="index.html">&larr;</a>
+            </button>
+          </nav>
+        </header>
+      </div>
       <section class="title-section">
         <div class="title-container">
           <h1 class="project-title">REST Project</h1>
@@ -115,10 +115,12 @@
       <footer class="footer" id="contact">
         <div class="container grid grid--2-cols">
           <div class="footer-text-box">
-            <h3 class="heading-h3">Got idea?</h3>
-            <p class="footer-text">
+            <h3 class="heading-h3">
               Currently looking for a full time position (office or remote) as a
               Junior Frontend (React) Dev.
+            </h3>
+            <p class="footer-text">
+              Feel free to contact me on any social media or via email!
             </p>
             <p class="footer-email">
               <span>Send me an email! : </span>
