new project (still work in progress)

--- a/index.html
+++ b/index.html
@@ -244,6 +244,27 @@
                 <a href="project3.html" class="view-project">View project</a>
               </div>
             </div>
+            <div class="project test3">
+              <div class="project-box">
+                <picture>
+                  <source srcset="Zdjecia/pasta-main.jpg" type="image/jpg" />
+                  <img
+                    src="Zdjecia/pasta-main.jpg"
+                    class="project-pic"
+                    alt="project main page"
+                  />
+                </picture>
+                <h4 class="heading-h4">Pasta Shop (WORK IN PROGRESS)</h4>
+                <p class="project-short-description">
+                  E-commerce website for fictional pasta company
+                </p>
+                <a
+                  href="https://github.com/m-dombkowski/pasta-ecomm-react"
+                  class="view-project"
+                  >Github repo</a
+                >
+              </div>
+            </div>
           </div>
         </div>
       </section>
